# aitools

./: economic_pulse.py
geodata/: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
geodata/api/: Dockerfile  pyproject.toml
geodata/api/src/api/: auth.py  config.py  db.py  main.py  schemas.py  usage.py
geodata/api/src/api/routes/: admin.py  billing.py  facilities.py  health.py  layers.py  tiles.py
geodata/apps/mobile/: package.json
geodata/apps/mobile/app/(tabs)/: map.tsx
geodata/apps/mobile/components/: FacilitySheet.tsx  FilterSheet.tsx  MapView.tsx
geodata/apps/mobile/lib/: api.ts
geodata/apps/web/: package.json  vite.config.ts
geodata/apps/web/app/: root.tsx
geodata/db/: alembic.ini
geodata/db/migrations/: env.py
geodata/db/migrations/versions/: 001_initial_schema.py  002_drop_npi_unique.py  003_add_ccn.py  004_violation_rollup.py  005_auth_billing_tables.py
geodata/docs/brainstorms/: 2026-04-10-vector-tile-platform-brainstorm.md
geodata/docs/plans/: 2026-04-10-feat-care-facility-intelligence-platform-plan.md
geodata/pipeline/: Dockerfile  pyproject.toml
geodata/pipeline/src/pipeline/: celery_app.py  config.py  db.py  models.py  tasks.py
geodata/pipeline/src/pipeline/crosswalk/: resolver.py
geodata/pipeline/src/pipeline/geocoding/: geocoder.py
geodata/pipeline/src/pipeline/ingest/: cdph.py  cdph_sea.py  cdss.py  cdss_violations.py  cms_nh_compare.py  hcai.py  hcris.py
geodata/pipeline/src/pipeline/tiles/: generate.py
geodata/pipeline/src/pipeline/violations/: normalize.py  rollup.py  snapshots.py
geodata/pipeline/tests/: conftest.py  test_cdph_sea_ingest.py  test_cms_nh_compare_ingest.py  test_conftest_sanity.py  test_violations_live.py  test_violations_normalize.py  test_violations_rollup.py  test_violations_snapshots.py
geodata/pipeline/tests/fixtures/violations/: cdph_sea_sample.xlsx  cms_nh_compare_sample.csv
(+10 files in other folders)
