[project]
name = "geodata-pipeline"
version = "0.1.0"
description = "Care facility data ingest pipeline"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.15",
    "alembic>=1.13",
    "celery>=5.4",
    "redis>=5.0",
    "pandas>=2.2",
    "geopandas>=1.0",
    "shapely>=2.0",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "boto3>=1.35",       # S3-compat API for R2
    "openpyxl>=3.1",     # read XLSX files
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "types-redis",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
